--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GameJamMapp.GameJamMapp
+GameDefaultMap=/Game/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/GameJamMapp.GameJamMapp
 GlobalDefaultGameMode=/Game/JamGameMode.JamGameMode_C
 
